docs/1.3/_sources/user-guide/model-gallery/spectral/plot_gauss_spectral.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "user-guide/model-gallery/spectral/plot_gauss_spectral.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_user-guide_model-gallery_spectral_plot_gauss_spectral.py>`
        to download the full example code. or to run this example in your browser via Binder

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_user-guide_model-gallery_spectral_plot_gauss_spectral.py:


.. _gaussian-spectral-model:

Gaussian spectral model
=======================

This model parametrises a gaussian spectrum.

It is defined by the following equation:

.. math::
    \phi(E) = \frac{N_0}{\sigma \sqrt{2\pi}}  \exp{ \frac{- \left( E-\bar{E} \right)^2 }{2 \sigma^2} }

.. GENERATED FROM PYTHON SOURCE LINES 17-20

Example plot
------------
Here is an example plot of the model:

.. GENERATED FROM PYTHON SOURCE LINES 20-31

.. code-block:: Python


    from astropy import units as u
    import matplotlib.pyplot as plt
    from gammapy.modeling.models import GaussianSpectralModel, Models, SkyModel

    energy_bounds = [0.1, 100] * u.TeV
    model = GaussianSpectralModel(norm="1e-2 cm-2 s-1", mean=2 * u.TeV, sigma=0.2 * u.TeV)
    model.plot(energy_bounds)
    plt.grid(which="both")
    plt.ylim(1e-24, 1e-1)




.. image-sg:: /user-guide/model-gallery/spectral/images/sphx_glr_plot_gauss_spectral_001.png
   :alt: plot gauss spectral
   :srcset: /user-guide/model-gallery/spectral/images/sphx_glr_plot_gauss_spectral_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    (1e-24, 0.1)



.. GENERATED FROM PYTHON SOURCE LINES 32-35

YAML representation
-------------------
Here is an example YAML file using the model:

.. GENERATED FROM PYTHON SOURCE LINES 35-40

.. code-block:: Python


    model = SkyModel(spectral_model=model, name="gaussian-model")
    models = Models([model])

    print(models.to_yaml())




.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    components:
    -   name: gaussian-model
        type: SkyModel
        spectral:
            type: GaussianSpectralModel
            parameters:
            -   name: amplitude
                value: 1.0e-12
                unit: cm-2 s-1
            -   name: mean
                value: 2.0
                unit: TeV
            -   name: sigma
                value: 0.2
                unit: TeV
    metadata:
        creator: Gammapy 1.3
        date: '2024-11-26T10:08:49.382518'
        origin: null






.. _sphx_glr_download_user-guide_model-gallery_spectral_plot_gauss_spectral.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: binder-badge

      .. image:: images/binder_badge_logo.svg
        :target: https://mybinder.org/v2/gh/gammapy/gammapy-webpage/v1.3?urlpath=lab/tree/notebooks/1.3/user-guide/model-gallery/spectral/plot_gauss_spectral.ipynb
        :alt: Launch binder
        :width: 150 px

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_gauss_spectral.ipynb <plot_gauss_spectral.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_gauss_spectral.py <plot_gauss_spectral.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: plot_gauss_spectral.zip <plot_gauss_spectral.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
